Header alignment and spacing. Addresses issue #5

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -257,9 +257,10 @@ section.recent-posts .other-recent-posts .comments-link a:hover {
 	overflow: hidden;
 	background: url(http://static.ucsc.edu/_responsive/images/logos/ucsc-logotype.svg) no-repeat left top;
 	background-size: contain;
-	height: 50px;
+	height: 48px;
 	display: block;
 	width: 100%;
+	margin-top:0.25em;
 }
 
 .campus-logo::before {
@@ -276,7 +277,7 @@ section.recent-posts .other-recent-posts .comments-link a:hover {
 		display:table;
 		width: 100%;
 		// border:4px dotted red;
-		padding: 1.5em 1em;
+		padding: 2.2em 7.6% 2em;
 
 		.cell {
 			vertical-align: top;
@@ -292,8 +293,8 @@ section.recent-posts .other-recent-posts .comments-link a:hover {
 			// border:4px dotted blue;
 			text-align: left; 			
 			@include media($tablet) {
-				width:22%;
-				padding-right: 0.5em;	
+				width:20%;
+				padding-right: 1em;	
 			}			
 		}
 
@@ -304,6 +305,10 @@ section.recent-posts .other-recent-posts .comments-link a:hover {
 				line-height: 1.3;
 				margin: 0;
 				padding: 0;
+			}
+			#site-title a { 
+				margin-top: -0.15em;
+				line-height: 1.1;
 			}
 			@include media($tablet) {
 				width: 60%;
@@ -318,6 +323,7 @@ section.recent-posts .other-recent-posts .comments-link a:hover {
 				position: relative;
 				top: auto !important;
 				right: auto;
+				margin-top:0.15em;
 			}
 			#s:focus {
 				width: 150px;
